[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/BaseTheme.tres" type="Theme" id=1]
[ext_resource path="res://Graphics/Fonts/Bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/ChooseAvatar.gd" type="Script" id=3]
[ext_resource path="res://Levels/AvatarDisplay.tscn" type="PackedScene" id=4]

[node name="ChooseAvatar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 39.0
margin_top = 42.0
margin_right = 159.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 2 )
text = "¡Crea tu avatar!"

[node name="Customizations" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.0
margin_top = -62.0
margin_right = 230.0
margin_bottom = 231.0

[node name="Cuerpo" type="Tabs" parent="Customizations"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="BodyList" type="ItemList" parent="Customizations/Cuerpo"]
anchor_right = 1.0
anchor_bottom = 1.0
allow_search = false
max_columns = 4
same_column_width = true

[node name="Ojos" type="Tabs" parent="Customizations"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="EyesList" type="ItemList" parent="Customizations/Ojos"]
anchor_right = 1.0
anchor_bottom = 1.0
max_columns = 4
same_column_width = true

[node name="Boca" type="Tabs" parent="Customizations"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MouthList" type="ItemList" parent="Customizations/Boca"]
anchor_right = 1.0
anchor_bottom = 1.0
max_columns = 4
same_column_width = true

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -428.0
margin_bottom = -77.0
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 576, 351 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="AvatarDisplay" parent="ViewportContainer/Viewport" instance=ExtResource( 4 )]

[node name="Done" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -238.0
margin_right = 5.0
margin_bottom = -208.0
text = "¡Listo!"

[connection signal="item_selected" from="Customizations/Cuerpo/BodyList" to="." method="_on_BodyList_item_selected"]
[connection signal="item_selected" from="Customizations/Ojos/EyesList" to="." method="_on_EyesList_item_selected"]
[connection signal="item_selected" from="Customizations/Boca/MouthList" to="." method="_on_MouthList_item_selected"]
[connection signal="pressed" from="Done" to="." method="_on_Done_pressed"]
